Created test with decision tree

--- a/test_animation_decision_tree.ipynb
+++ b/test_animation_decision_tree.ipynb
@@ -224,8 +224,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "with open('./knn_model.pkl', 'rb') as f:\n",
-    "    knn_model = pickle.load(f)\n",
+    "with open('./decision_model.pkl', 'rb') as f:\n",
+    "    decision_model = pickle.load(f)\n",
     "\n",
     "base = pd.read_csv(\"./random_selected_test_rows.csv\")\n",
     "del base[base.columns[0]]\n",
@@ -666,10 +666,10 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;KNeighborsClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;DecisionTreeClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.tree.DecisionTreeClassifier.html\">?<span>Documentation for DecisionTreeClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>DecisionTreeClassifier()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "KNeighborsClassifier()"
+       "DecisionTreeClassifier()"
       ]
      },
      "execution_count": 3,
@@ -680,7 +680,7 @@
    "source": [
     "classes = ['extension', 'finger_abduction', 'finger_adduction', 'flexion', 'grip',\n",
     " 'pronation', 'radial_deviation', 'rest', 'supination', 'ulnar_deviation']\n",
-    "knn_model"
+    "decision_model"
    ]
   },
   {
@@ -714,45 +714,29 @@
     }
    ],
    "source": [
-    "t = base.loc[(base['class'] == \"grip\") | (base['class'] == \"rest\") | (base['class'] == \"flexion\")]\n",
-    "t['class'].value_counts()\n"
+    "filtered_base = base.loc[(base['class'] == \"grip\") | (base['class'] == \"rest\") | (base['class'] == \"flexion\")]\n",
+    "filtered_base['class'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(SENSOR0_RMS      0.017126\n",
-       " SENSOR1_RMS      0.031993\n",
-       " SENSOR2_RMS      0.004521\n",
-       " SENSOR3_RMS      0.001182\n",
-       " SENSOR0_APPEN    0.943779\n",
-       " SENSOR1_APPEN    0.928368\n",
-       " SENSOR2_APPEN    1.208515\n",
-       " SENSOR3_APPEN    0.934016\n",
-       " Name: 45, dtype: object,\n",
-       " 'flexion')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TODO: Uses only GRIP, REST and FLEXION\n",
-    "t_base = base.loc[(base['class'] == \"grip\") | (base['class'] == \"rest\") | (base['class'] == \"flexion\")]\n",
+    "def select_random_data():\n",
+    "    r_row = np.random.randint(0, len(filtered_base))\n",
+    "    test_one = filtered_base.iloc[r_row]\n",
     "\n",
-    "r_row = np.random.randint(0, len(t_base))\n",
-    "test_one = t_base.iloc[r_row]\n",
+    "    X = test_one[train_cols]\n",
+    "    Y = test_one[target_cols]\n",
+    "    X, Y\n",
     "\n",
-    "X = test_one[train_cols]\n",
-    "Y = test_one[target_cols]\n",
-    "X, Y"
+    "    predict_classes = decision_model.predict([X])\n",
+    "    pred_class = classes[predict_classes[0]].upper()\n",
+    "    print(\"Classe Original: \", Y.upper())\n",
+    "    print(\"Classe Predita: \", pred_class)\n",
+    "    return pred_class"
    ]
   },
   {
@@ -767,165 +751,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classe Original:  REST\n",
+      "Classe Predita:  REST\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/beloin/Documents/tcc/TCC-HandMovementClassifier/venv/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "/home/beloin/Documents/tcc/TCC-HandMovementClassifier/venv/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'flexion'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_classes = knn_model.predict([X])\n",
-    "classes[predict_classes[0]]"
+    "random_pred = select_random_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection.send_movement(classes[predict_classes[0]].upper())"
+    "connection.send_movement(random_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(SENSOR0_RMS      0.031464\n",
-       " SENSOR1_RMS       0.03963\n",
-       " SENSOR2_RMS      0.025138\n",
-       " SENSOR3_RMS      0.004177\n",
-       " SENSOR0_APPEN    0.795563\n",
-       " SENSOR1_APPEN    0.760163\n",
-       " SENSOR2_APPEN     0.76263\n",
-       " SENSOR3_APPEN    0.839427\n",
-       " Name: 1548, dtype: object,\n",
-       " 'grip')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r_row = np.random.randint(0, len(t_base))\n",
-    "test_one = t_base.iloc[r_row]\n",
-    "\n",
-    "X = test_one[train_cols]\n",
-    "Y = test_one[target_cols]\n",
-    "X, Y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GRIP\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/beloin/Documents/tcc/TCC-HandMovementClassifier/venv/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "predict_classes = knn_model.predict([X])\n",
-    "pred_class = classes[predict_classes[0]].upper()\n",
-    "print(pred_class)\n",
-    "connection.send_movement(pred_class)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(SENSOR0_RMS      0.018876\n",
-       " SENSOR1_RMS       0.02381\n",
-       " SENSOR2_RMS      0.004811\n",
-       " SENSOR3_RMS      0.002196\n",
-       " SENSOR0_APPEN    0.868633\n",
-       " SENSOR1_APPEN    1.007704\n",
-       " SENSOR2_APPEN     1.16793\n",
-       " SENSOR3_APPEN    0.818832\n",
-       " Name: 842, dtype: object,\n",
-       " 'grip')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r_row = np.random.randint(0, len(t_base))\n",
-    "test_one = t_base.iloc[r_row]\n",
-    "\n",
-    "X = test_one[train_cols]\n",
-    "Y = test_one[target_cols]\n",
-    "X, Y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GRIP\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/beloin/Documents/tcc/TCC-HandMovementClassifier/venv/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "predict_classes = knn_model.predict([X])\n",
-    "pred_class = classes[predict_classes[0]].upper()\n",
-    "print(pred_class)\n",
-    "connection.send_movement(pred_class)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
